--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,35 +8,80 @@
     tools:context=".MainActivity">
 
     <Button
-        android:layout_width="177dp"
-        android:layout_height="62dp"
-        android:id="@+id/RecyclerViewWithIndicator"
-        android:layout_marginTop="88dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        android:text="RecyclerViewWithIndicator"
-        app:layout_constraintTop_toTopOf="parent">
-    </Button>
-
-    <Button
-        android:layout_width="177dp"
-        android:layout_height="62dp"
-        android:id="@+id/Fragment_ViewPaper2_TabLayout"
-        android:layout_marginTop="428dp"
-        android:text="Fragment_ViewPaper2_TabLayout"
+        android:id="@+id/btn_viewpager2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="19dp"
+        android:layout_marginTop="146dp"
+        android:layout_marginEnd="301dp"
+        android:text="View Pager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:layout_width="177dp"
-        android:layout_height="62dp"
-        android:id="@+id/ViewFlipper_CircleIndicator"
-        android:layout_marginTop="280dp"
-        android:text="ViewFlipper_CircleIndicator"
+        android:id="@+id/btn_viewpager"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="19dp"
+        android:layout_marginTop="144dp"
+        android:layout_marginEnd="301dp"
+        android:text="View Pager"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.482"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn_indicator"
+        android:layout_width="wrap_content"
+        android:text="RecylerView Indicator"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn_viewFlipper1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="100dp"
+        android:text="ViewFlipper1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.088"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.499" />
+
+    <Button
+        android:id="@+id/btn_v2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="144dp"
+        android:layout_marginEnd="16dp"
+        android:text="ViewFliper With CrideIndicator"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn_viewPage2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="74dp"
+        android:layout_marginTop="74dp"
+        android:text="ViewPager2 vs Indicator3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_viewFlipper1" />
+
+    <Button
+        android:id="@+id/btn_sliderview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="27dp"
+        android:layout_marginTop="39dp"
+        android:text="SliderView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_viewpager2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
